[gd_scene load_steps=34 format=3 uid="uid://nafn1aysv3bb"]

[ext_resource type="Script" path="res://Player/Scripts/Player.gd" id="1_ddj2j"]
[ext_resource type="Script" path="res://scripts/cameraMovement.gd" id="4_j4ui1"]
[ext_resource type="Resource" uid="uid://g3wo6f6s2bdl" path="res://Player/VisualSounds/Chord.tres" id="5_kpy64"]
[ext_resource type="Script" path="res://SoundVisual/VisualSoundEmiter.gd" id="5_o25cj"]
[ext_resource type="Resource" uid="uid://dqf6pm74vbn15" path="res://Player/VisualSounds/Notes/1 D.tres" id="7_ac2rc"]
[ext_resource type="Resource" uid="uid://bvhrvie7lrs32" path="res://Player/VisualSounds/Notes/2 E.tres" id="8_sqrow"]
[ext_resource type="Resource" uid="uid://bbhvk1oqsjvu6" path="res://Player/VisualSounds/Notes/3 F.tres" id="9_n3xd0"]
[ext_resource type="Resource" uid="uid://byqa6lpw2i5ah" path="res://Player/VisualSounds/Notes/4 F#.tres" id="10_3x7yu"]
[ext_resource type="Resource" uid="uid://dx676b6fuiryy" path="res://Player/VisualSounds/Notes/5 G.tres" id="11_nco73"]
[ext_resource type="Resource" uid="uid://cwq4a78htuhsn" path="res://Player/VisualSounds/Notes/6 A.tres" id="12_jj07r"]
[ext_resource type="Resource" uid="uid://dtkib8c44tx51" path="res://Player/VisualSounds/Notes/7 A#.tres" id="13_3g485"]
[ext_resource type="Resource" uid="uid://dff8sfuvf5dj2" path="res://Player/VisualSounds/Notes/8 ะก.tres" id="14_lmjqm"]
[ext_resource type="Script" path="res://Player/Scripts/SitTimer.gd" id="15_07xxq"]
[ext_resource type="Resource" uid="uid://bxeem133rbk56" path="res://Player/VisualSounds/Notes/9 D.tres" id="15_8hpbh"]
[ext_resource type="Script" path="res://Player/Scripts/Chord.gd" id="16_2hsuj"]
[ext_resource type="Resource" uid="uid://bikqkx1cslb0a" path="res://Player/VisualSounds/Notes/10 E.tres" id="16_88oet"]
[ext_resource type="Script" path="res://Player/Scripts/Blade.gd" id="16_j0q56"]
[ext_resource type="Texture2D" uid="uid://do7tm7rmlnco5" path="res://icon.svg" id="17_h3t5y"]
[ext_resource type="Texture2D" uid="uid://2wj6yv8a4a74" path="res://Sprites/mc_walk_ss.png" id="17_psbc7"]
[ext_resource type="Resource" uid="uid://c1cp5qmb6qr76" path="res://Player/VisualSounds/Notes/11 F#.tres" id="17_tped4"]
[ext_resource type="Script" path="res://SoundVisual/SpriteOutline.gd" id="18_jvyfl"]
[ext_resource type="Script" path="res://Player/Scripts/Notes.gd" id="18_rqeu1"]
[ext_resource type="Script" path="res://Player/Scripts/Animator.gd" id="19_jj5cj"]
[ext_resource type="Resource" uid="uid://by74txr0wud2k" path="res://Player/VisualSounds/Step.tres" id="20_de0kk"]
[ext_resource type="AudioStream" uid="uid://cjvsbf3g5ob5h" path="res://Audio/Music/tonal ambient.wav" id="25_evxge"]
[ext_resource type="Script" path="res://Player/Scripts/MusicFade.gd" id="26_2kq0c"]
[ext_resource type="Script" path="res://health_component.gd" id="27_25wlk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sb2fr"]
radius = 15.0

[sub_resource type="Animation" id="Animation_s0pgx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ooot5"]
resource_name = "walk"
length = 1.20002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"step"
}, {
"args": [],
"method": &"step"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gby43"]
_data = {
"RESET": SubResource("Animation_s0pgx"),
"walk": SubResource("Animation_ooot5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8p4u6"]
radius = 18.0
height = 74.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_divfl"]
radius = 18.0
height = 74.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_ddj2j")
acceleration_time = 0.15
speed = 250.0

[node name="camera" type="Node2D" parent="."]
top_level = true
script = ExtResource("4_j4ui1")
zoom_time = 0.7
zoom_delta = 0.1
ahead_distance = 0.1
arrive_time = 0.5

[node name="Camera2D" type="Camera2D" parent="camera"]

[node name="shake_timer" type="Timer" parent="camera/Camera2D"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sb2fr")

[node name="sit_timer" type="Timer" parent="."]
wait_time = 2.0
script = ExtResource("15_07xxq")

[node name="chord_cooldown" type="Timer" parent="."]
wait_time = 0.6
script = ExtResource("16_2hsuj")
chord_particle = ExtResource("5_kpy64")

[node name="notes" type="Node2D" parent="."]
script = ExtResource("18_rqeu1")
notes_audio = Array[Resource("res://SoundVisual/SoundVisual.gd")]([ExtResource("7_ac2rc"), ExtResource("8_sqrow"), ExtResource("9_n3xd0"), ExtResource("10_3x7yu"), ExtResource("11_nco73"), ExtResource("12_jj07r"), ExtResource("13_3g485"), ExtResource("14_lmjqm"), ExtResource("15_8hpbh"), ExtResource("16_88oet"), ExtResource("17_tped4")])

[node name="sound_emiter" type="Node2D" parent="."]
script = ExtResource("5_o25cj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_gby43")
}
autoplay = "walk"
speed_scale = 1.2
script = ExtResource("19_jj5cj")
step_paritcle = ExtResource("20_de0kk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(0.2, 0.2)
texture = ExtResource("17_psbc7")
hframes = 6

[node name="Area2D" type="Area2D" parent="Sprite2D"]
position = Vector2(0, 200)
scale = Vector2(5, 5)
collision_layer = 0
collision_mask = 2
script = ExtResource("18_jvyfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_8p4u6")

[node name="blade" type="Area2D" parent="."]
position = Vector2(0, -48)
collision_layer = 16
collision_mask = 16
script = ExtResource("16_j0q56")

[node name="hit_area" type="CollisionPolygon2D" parent="blade"]
polygon = PackedVector2Array(0, 0, 125, 20, 125, -20)
disabled = true

[node name="smear" type="Sprite2D" parent="blade"]
visible = false
position = Vector2(115, 0)
scale = Vector2(0.15, 0.59)
texture = ExtResource("17_h3t5y")

[node name="attack_cooldown" type="Timer" parent="blade"]
one_shot = true

[node name="attack_duration" type="Timer" parent="blade"]
wait_time = 0.05
one_shot = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_evxge")
autoplay = true
script = ExtResource("26_2kq0c")

[node name="health_component" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("27_25wlk")
max_hp = 100

[node name="hitbox" type="CollisionShape2D" parent="health_component"]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_divfl")

[connection signal="timeout" from="camera/Camera2D/shake_timer" to="camera/Camera2D" method="_on_shake_timer_timeout"]
[connection signal="area_entered" from="blade" to="blade" method="_on_area_entered"]
[connection signal="body_entered" from="blade" to="blade" method="_on_body_entered"]
[connection signal="timeout" from="blade/attack_cooldown" to="blade" method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="blade/attack_duration" to="blade" method="_on_attack_duration_timeout"]
